k83/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-app
  namespace: rust-app
spec:
  replicas: 2
  stragtegy:
    type: RollingUpdate
    rollingUpdate: 
    maxSurge: 1
    maxUnavailable: 0
  selector:
    matchLabels:
      app: rust-app
  template:
    metadata:
      labels:
        app: rust-app
    spec:
      imagePullSecrets:
        - name: ecr-credentials
      containers:
        - name: rust-app
          image: ACCOUNT_ID.dkr.ecr.eu-central-1.amazonaws.com/rust-devops-app:IMAGE_SHA
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rust-app
  namespace: rust-app
spec:
  selector:
    app: rust-app
  ports:
    - port: 80
      targetPort: 8080
